@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ru.meefik.linuxdeploy"
-    android:versionCode="63"
+    android:versionCode="64"
     android:versionName="1.3.8" >
 
     <uses-sdk
@@ -11,11 +11,13 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/BlackTheme" >
+        android:theme="@style/BlackTheme"
+        android:allowBackup="true" >
         <activity
             android:name="ru.meefik.linuxdeploy.MainActivity"
             android:label="@string/title_activity_main"
@@ -44,6 +46,8 @@
             android:icon="@drawable/ic_launcher_profiles"
             android:label="@string/title_activity_profiles" >
         </activity>
+        <activity android:name="ru.meefik.linuxdeploy.FullscreenActivity" >
+        </activity>
 
         <receiver
             android:name="ru.meefik.linuxdeploy.BootUpReceiver"
@@ -54,9 +58,10 @@
             </intent-filter>
         </receiver>
 
-        <activity
-            android:name="ru.meefik.linuxdeploy.FullscreenActivity" >
-        </activity>
+        <service
+            android:name="ru.meefik.linuxdeploy.BootUpService"
+            android:enabled="true" >
+        </service>
     </application>
 
 </manifest>
