@@ -8,13 +8,8 @@ public class BootUpReceiver extends BroadcastReceiver {
 
 	@Override
 	public void onReceive(final Context context, Intent intent) {
-		(new Thread() {
-			@Override
-			public void run() {
-				new ShellEnv(context).deployCmd("start");
-			}
-		}).start();
-		MainActivity.notification(context, null);
+	    Intent service = new Intent(context, BootUpService.class);
+	    context.startService(service);
 	}
 
 }
